testdata/golden/sema/invalid/concurrency/channel_send_noncopy_requires_own.fmt
// Method calls should report the actual ownership mismatch for non-Copy payloads.

type Item = { value: int };

@entrypoint
fn main() -> int {
    let ch: own Channel<Item> = make_channel::<Item>(1:uint);
    let item: Item = { value = 1 };
    ch.send(item);
    return 0;
}
